--- a/src/main/resources/templates/thymeleaf/fo/community/magazine9_main.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/magazine9_main.html
@@ -101,9 +101,10 @@
         <div class="magazine9_wrap">
             <div id="nav">
                 <ul>
-                    <li><a href="#" class="over">홈</a></li>
-                    <li><a href="#">인사이트</a></li>
-                    <li><a href="#">아티스트 필름</a></li>
+                    <li><a href="/temp/magazine9_main" class="over">홈</a></li>
+                    <li><a href="/mgz9/insights">인사이트</a></li>
+                    <li><a href="/mgz9/exhibition">전시</a></li>
+                    <li><a href="/mgz9/media">아티스트 필름</a></li>
                     <li><a href="#">아티스트</a></li>
                 </ul>
             </div>            
