--- a/src/main/resources/templates/thymeleaf/fo/mgz/exhibition.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/exhibition.html
@@ -76,6 +76,7 @@
     </style>
     
     <link rel="icon" type="image/png" href="/resources/img/favicon.png">
+     <link type="text/css" rel="stylesheet" href="/resources/css/common_new.css"/>
     
 </head>
 
@@ -85,21 +86,35 @@
 		<div class="body-wrap coll-mobile">
 			<input type="hidden" id="pageStart">
 			<div class="contents">
-				<div class="mgz-wrap">
-					<div class="mgz-top mgz-bg-3">
+				<!-- <div class="mgz-wrap"> -->
+				<div class="magazine9_wrap">
+					<div id="nav">
+		                <ul>
+		                    <li><a href="/temp/magazine9_main" class="over">홈</a></li>
+		                    <li><a href="/mgz9/insights">인사이트</a></li>
+		                    <li><a href="/mgz9/exhibition">전시</a></li>
+		                    <li><a href="/mgz9/media">아티스트 필름</a></li>	                    
+		                    <li><a href="#">아티스트</a></li>
+		                </ul>
+		            </div>
+           		<div class="magazine9_visual_wrap">
+             	   <img src="/resources/img/img_new/magazine9_visual.jpg" alt="">
+           		</div> 
+					<!-- <div class="mgz-top mgz-bg-3">
 						<div class="mgz-title">
 							<img src="/resources/img/mgz/title.png" />
 							<div class="mgz-text"><span>최신 전시 소식부터 가장 HOT한 전시 추천까지</span></div>
 						</div>
-					</div>
-					<div class="mgz-body max-1500">
-						<div class="mgz-link">
+					</div> -->
+					<!-- <div class="mgz-body max-1500"> -->
+					<div class="popular_insight_wrap">
+						<!-- <div class="mgz-link">
 							<ul class="mgz-ul">
 								<li><a href="/mgz9/insights">Insights</a></li>
 								<li><a href="/mgz9/media">Artist Film</a></li>
 								<li class="active"><a href="/mgz9/exhibition">Exhibition</a></li>
 							</ul>
-						</div>
+						</div> -->
 						
 						<ul class="mgz-list" id="mgz9List"></ul>
 						
