커뮤니티 게시물 관리 댓글/대댓글 조회 기능 추가

--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_showingoff_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_showingoff_detailpage.html
@@ -148,8 +148,12 @@
 				$(".ellipsis").css('padding', '10');
 		     }
 		});
-		
-    	var comtSq = 58 //커뮤니티 순번
+		var message = /*[[${message}]]*/ 'default' //커뮤니티 순번
+		if(message != "" && message != null){
+			alert(message);
+			location.href = "/main";
+		}
+    	var comtSq = /*[[${comtSq}]]*/ 'default' //커뮤니티 순번
     	var otherComt; // 작성자의 다른 자랑하기
     	var showOffList;
 		var showOff;
