--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -107,10 +107,13 @@
 							<!-- <div class="swiper-slide" align="center" style="background-color:#ffffff;">
 								<a href="https://promo.dealing-art.com/dp/collectors-loving-ittem" target="_blank"><img src="/resources/img/banner-20_pc.jpg" border="0"/></a>
 							</div> -->
-							<!--/* 메인 배너 추가 (2023-01-18) : 정대현 */-->
-							<!-- <div class="swiper-slide" align="center" style="background-color:#ffffff;">
-								<img src="/resources/img/DA_banner_pc_230516.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/dp/da_1st';" style="cursor:pointer;"/>
-							</div> -->
+							<!-- 메인 배너 추가 (2023-09-12) : 정영우 -->
+							<div class="swiper-slide" align="center" style="background-color:#ffffff;">
+								<img src="/resources/img/banner-22_pc.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/da_update';" style="cursor:pointer;"/>
+							</div>
+							<div class="swiper-slide" align="center" style="background-color:#ffffff;">
+								<img src="/resources/img/banner-21_pc.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet ';" style="cursor:pointer;"/>
+							</div>
 							<div class="swiper-slide" align="center" style="background-color:#ffffff;">
 								<img src="/resources/img/banner-21_pc.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet ';" style="cursor:pointer;"/>
 							</div>
@@ -135,10 +138,10 @@
 							<!-- <div class="swiper-slide" align="center" style="background-color:#ffffff;">
 								<a href="https://promo.dealing-art.com/dp/collectors-loving-ittem" target="_blank"><img src="/resources/img/banner-20_pc.jpg" border="0"/></a>
 							</div> -->
-							<!--/* 메인 배너 추가 (2023-01-18) : 정대현 */-->
-							<!-- <div class="swiper-slide">
-								<img src="/resources/img/DA_banner_pc_230516.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/dp/da_1st';" style="cursor:pointer;"/>
-							</div> -->
+							<!-- 메인 배너 추가 (2023-09-12) : 정영우 -->
+							<div class="swiper-slide">
+								<img src="/resources/img/banner-22_pc.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/da_update';" style="cursor:pointer;"/>
+							</div>
 							<div class="swiper-slide">
 								<img src="/resources/img/banner-21_pc.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet';" style="cursor:pointer;"/>
 							</div>
@@ -166,10 +169,10 @@
 							<!-- <div class="swiper-slide" align="center" style="background-color:#ffffff;">
 								<a href="https://promo.dealing-art.com/dp/collectors-loving-ittem" target="_blank"><img src="/resources/img/banner-20_mobile.jpg" border="0"/></a>
 							</div> -->
-							<!--/* 메인 배너 추가 (2023-01-18) : 정대현 */-->
-							<!-- <div class="swiper-slide">
-								<img src="/resources/img/DA_banner_mobile_230516.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/dp/da_1st';" style="cursor:pointer;"/>
-							</div> -->
+							<!-- 메인 배너 추가 (2023-01-18) : 정대현 -->
+							<div class="swiper-slide">
+								<img src="/resources/img/banner-22_mobile.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/da_update';" style="cursor:pointer;"/>
+							</div>
 							<div class="swiper-slide">
 								<img src="/resources/img/banner-21_mobile.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet ';" style="cursor:pointer;"/>
 							</div>
