--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_myworks.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_myworks.html
@@ -109,42 +109,51 @@
                             <input type="text" id="search_input" onkeydown="enter(event)" placeholder="검색어를 입력해 주세요." >
                             <button class="btn_mypage_search" onclick="searchMyWork()"></button>
                           </div>
-                          <button onclick="myWorkRegBtn()" class="btn_mypage_registering">등록하기</button>
+                          <button th:if="${#strings.isEmpty(mbrSq)}" onclick="myWorkRegBtn()" class="btn_mypage_registering">등록하기</button>
                     </div>
                     <div class="mypage_tap_wrap">
+                    <th:block th:if="${#strings.isEmpty(mbrSq)}">
                         <ul class="tap">
                             <li id="btn_nal1"class="on bg_no">전체(<em id="myTotal">99</em>)</li>
                             <li id="btn_nal2">소장품(<em id="myCollTotal">99</em>)</li>
                             <li id="btn_nal3">창작품(<em id="myWorkTotal">99</em>)</li>
-                            <li id="btn_nal4" class="bg_no"><img src="/resources/img/img_new/ico_tap_setting.png" alt=""> 작품관리</li>
+                            <li id="btn_nal4" class="bg_no"><img src="/resources/img/img_new/ico_tap_setting.png" alt="">작품관리</li>
                         </ul>
+                    </th:block>
+                    <th:block th:unless="${#strings.isEmpty(mbrSq)}">
+                        <ul class="tap">
+                            <li id="btn_nal1"class="on bg_no">전체(<em id="myTotal">99</em>)</li>
+                            <li id="btn_nal2">소장품(<em id="myCollTotal">99</em>)</li>
+                            <li id="btn_nal3" class="bg_no">창작품(<em id="myWorkTotal">99</em>)</li>
+                        </ul>
+                    </th:block>
                     </div>
                     
-                    		<div class="work-drp">
-								<div class="work-hov">
-									<ul>
-										<li><a href="#" class="wrh-1"><span>공개/비공개</span></a></li>
-										<li><a href="#" class="wrh-2"><span>판매등록</span></a></li>
-										<li><a href="#" class="wrh-3"><span>작품정보수정</span></a></li>
-										<li><a href="#" class="wrh-4"><span>판매정보수정</span></a></li>
-										<li><a href="#" class="wrh-5"><span>삭제</span></a></li>
-										<li><a href="#" class="wrh-6"><span>판매중단</span></a></li>
-									</ul>
-								</div>
+                   		<div class="work-drp">
+							<div class="work-hov">
+								<ul>
+									<li><a href="#" class="wrh-1"><span>공개/비공개</span></a></li>
+									<li><a href="#" class="wrh-2"><span>판매등록</span></a></li>
+									<li><a href="#" class="wrh-3"><span>작품정보수정</span></a></li>
+									<li><a href="#" class="wrh-4"><span>판매정보수정</span></a></li>
+									<li><a href="#" class="wrh-5"><span>삭제</span></a></li>
+									<li><a href="#" class="wrh-6"><span>판매중단</span></a></li>
+								</ul>
 							</div>
-							<div class="work-drp-2 dp_n">
-								<div class="wd-box">
-									<span style="color:white" id="selectedCount">(0)</span>
-									<button type="button" class="wd-btns wdb-1">공개</button>
-									<button type="button" class="wd-btns wdb-1">비공개</button>
-									<button type="button" class="wd-btns wdb-2">판매등록</button>
-									<button type="button" class="wd-btns wdb-3">작품정보수정</button>
-									<button type="button" class="wd-btns wdb-4">판매정보수정</button>
-									<button type="button" class="wd-btns wdb-5">삭제</button>
-									<button type="button" class="wd-btns wdb-6">판매중단</button>
-									<button type="button" class="wd-btns wdb-all">취소</button>
-								</div>
+						</div>
+						<div class="work-drp-2 dp_n">
+							<div class="wd-box">
+								<span style="color:white" id="selectedCount">(0)</span>
+								<button type="button" class="wd-btns wdb-1">공개</button>
+								<button type="button" class="wd-btns wdb-1">비공개</button>
+								<button type="button" class="wd-btns wdb-2">판매등록</button>
+								<button type="button" class="wd-btns wdb-3">작품정보수정</button>
+								<button type="button" class="wd-btns wdb-4">판매정보수정</button>
+								<button type="button" class="wd-btns wdb-5">삭제</button>
+								<button type="button" class="wd-btns wdb-6">판매중단</button>
+								<button type="button" class="wd-btns wdb-all">취소</button>
 							</div>
+						</div>
 							
                     <!-- mobile html 시작 -->
                     <div class="mypage_select_wrap">
@@ -155,7 +164,7 @@
                                 <option value="past">과거 순</option>
                             </select>
                         </div>
-                        <div class="sel_form">
+                        <div class="sel_form" th:if="${#strings.isEmpty(mbrSq)}">
                             <select name="sel_open" id="sel_open">
                                 <option value="all">형태</option>
                                 <option value="Y">공개</option>
@@ -175,22 +184,31 @@
     </div>
     <th:block th:replace="thymeleaf/footer :: footerFragment"></th:block>
 </body>
-<script type="text/javascript">
+<script th:inline="javascript">
 
 var searchOptions = new Object();
 var result = new Object();
-
+var mbrSq = /*[[${mbrSq}]]*/ 'default';
 
 $("document").ready(function(){
-	
-	$("#left_menu").load("/myPage/mypage_common_left");  // 레프트 메뉴 삽입
+	if(mbrSq != null && mbrSq != "" && mbrSq != undefined){ //타인 마이페이지면
+		$("#left_menu").load("/myPage/mypage_common_left", "mbrSq="+mbrSq);  // 레프트 메뉴 삽입
+	}else{
+		$("#left_menu").load("/myPage/mypage_common_left");  // 레프트 메뉴 삽입
+	}
 	
 	workList();
 
 });
 //작품 검색
 function workList(callback){
-	searchOptions.mbrSq = sMbrSqVal;
+	
+	if(mbrSq != null && mbrSq != "" && mbrSq != undefined){ //타인 마이페이지면
+		searchOptions.mbrSq = mbrSq;
+	}else{
+		searchOptions.mbrSq = sMbrSqVal;
+	}
+	
 	
 	var myTotal = 0;
 	var workTotal = 0;
@@ -505,7 +523,35 @@ function workList(callback){
         }
 	});
 }
-
+//거래 남은 시간 1초마다 계산해서 표현하기
+setInterval(function() {
+	var elements = document.querySelectorAll(".dealCount");
+	for(var i=0; i<elements.length; i++){
+		var html = '';
+		var dday = parseInt(elements[i].attributes.dday.value);
+		dday = new Date(dday).getTime();
+		var sday = parseInt(elements[i].attributes.sday.value);
+		sday = new Date(sday).getTime();
+		var today = new Date().getTime();
+		if(today >= dday){
+			location.reload;
+		}else if(today < sday){
+			html += '<li>'+elements[i].attributes.strtDt.value+'<span>거래 시작 예정</span></li>';
+		}else{
+			var gap = dday - today;
+			var day = Math.floor(gap / (1000 * 60 * 60 * 24));
+			var hour = Math.floor((gap % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+			var min = Math.floor((gap % (1000 * 60 * 60)) / (1000 * 60));
+			var sec = Math.floor((gap % (1000 * 60)) / 1000);
+			html += '<li>'+ day +'<span>day</span></li>';
+			html += '<li>'+ hour +'<span>hrs</span></li>';
+			html += '<li>'+ min +'<span>min</span></li>';
+			html += '<li>'+ sec +'<span>sec</span></li>';
+		}
+		elements[i].innerHTML = html;
+	  	//document.getElementById("dealCount").innerHTML = day + " 일 " + hour + " : " + min + " : " + sec;
+	}
+}, 1000);
 //화면 레이아웃 추가
 function masonryLayout(callback) {
  	var msnry = new Masonry( '.grid', {
