마이페이지 모바일 작업중

--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -689,7 +689,7 @@
 			modalConfirm("나의 작품 페이지로 이동합니다.", 
 					function(confirm){
 						if(confirm){
-							location.href="/myPage/myWorkList";
+							location.href="/myPage/workList";
 						}
 				}
 			);
