--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_mobile.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_mobile.html
@@ -217,7 +217,7 @@
 	});
 
 	$(document).on("click", ".myWorkList", function(){
-		location.href="/myPage/myWorkList"
+		location.href="/myPage/workList"
 	});
 
 </script>	
