--- a/src/main/resources/templates/thymeleaf/fo/myPage/otherpage_main.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/otherpage_main.html
@@ -107,7 +107,7 @@
                   <div class="mypage_works_wrap">
                     <div class="tit_wrap">
                         <h2>나의 작품 <span id="myWorksTotal">99</span></h2>
-                        <a href="/myPage/myWorkList" class="btn_more">더보기</a>
+                        <a href="/myPage/workList" class="btn_more">더보기</a>
                     </div>
                     <ul id="myWorks">
                         <li>
