--- a/src/main/resources/templates/thymeleaf/myPageLeft.html
+++ b/src/main/resources/templates/thymeleaf/myPageLeft.html
@@ -146,7 +146,7 @@ $(document).on("click", ".scrap", function(){
 });
 
 $(document).on("click", ".myWorkList", function(){
-	location.href="/myPage/myWorkList"
+	location.href="/myPage/workList"
 });
 </script>
 </th:blcok>	
