--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue.html
@@ -230,8 +230,8 @@ $("document").ready(function(){
 
 function ShowListAjax(callback){
 	
-	searchOptions.limit = 2; // 게시글 갯수제한
-	searchOptions.offset = nowPage * 2 // 페이지 당 갯수제한
+	searchOptions.limit = 4; // 게시글 갯수제한
+	searchOptions.offset = nowPage * 4 // 페이지 당 갯수제한
 	
 	$.ajax({
 		type: "POST"
@@ -262,7 +262,7 @@ function ShowList(data,callback){
 
         		if(result[i] != null){
 	            	html +=	'<div class="exhint_row">';
-	            	html +=	'<div class="exhint_list_img"><img src="'+result[i].comtImgUrl+'" alt=""><div class="ico_num">1+</div></div>';
+	            	html +=	'<div class="exhint_list_img"><img src="'+result[i].comtImgUrl+'" style="width:100%; height:100%;"><div class="ico_num">1+</div></div>';
 	            	html +=	'<div class="contents width75per">';
                 	html += '		<div class="item-ho4 check-div" style="display:none;">';
                 	html += '			<div class="pay-check mana-check">';
