--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue_mo.html
@@ -101,7 +101,8 @@
         <div class="mypage_wrap">
             <h2>이슈</h2>
             <div class="mypage_contents">
-                <div class="contents_left">
+            <div id="left_menu"></div>
+                <!-- <div class="contents_left">
                   <div class="myinfo_wrap">
                     <div class="myinfo_pic"></div>
                     <div class="myinfo_con">
@@ -148,7 +149,7 @@
                       <li><a href="#">나의 정보</a></li>
                     </ul>
                   </div>
-                </div>
+                </div> -->
                 <div class="contents_right">
                     <div class="mypage_search_wrap">
                         <div class="search">
@@ -508,4 +509,203 @@
     </div>
     <th:block th:replace="thymeleaf/footer :: footerFragment"></th:block>
 </body>
+<script th:inline="javascript">
+
+var mbrSq = /*[[${mbrSq}]]*/ 'default';
+
+var searchOptions = new Object();
+var result = new Object();
+var nowPage = 0;
+var offset = 0;
+
+var pageNextBtnCount = 0;
+var endPage = 0;
+var startPage = 0;
+var realEndPage = 0;
+var prev = false;
+var next = false;
+
+$("document").ready(function(){
+	
+	if(mbrSq != null && mbrSq != "" && mbrSq != undefined){ //타인 마이페이지면
+		$("#left_menu").load("/myPage/mypage_common_left", "mbrSq="+mbrSq);  // 레프트 메뉴 삽입
+		searchOptions.mbrSq = mbrSq;
+	}else{
+		$("#left_menu").load("/myPage/mypage_common_left");  // 레프트 메뉴 삽입
+		searchOptions.mbrSq = sMbrSqVal;
+	}	
+		searchOptions.comtTypCd ="ISS";
+
+		ShowListAjax();
+		
+});
+
+function ShowListAjax(callback){
+	
+	searchOptions.limit = 4; // 게시글 갯수제한
+	searchOptions.offset = nowPage * 4 // 페이지 당 갯수제한
+	
+	$.ajax({
+		type: "POST"
+		, url: "/myPage/MyShowListserch"
+		, data: searchOptions
+		, success: function(data){
+			console.log(data.result)
+			ShowList(data,callback);
+		}
+		, error: function(data){
+			alert("오류 발생" + error);
+		}
+	});
+}
+
+function ShowList(data,callback){
+	var html = '';
+	
+	result = data.result;
+	var Total = data.myTotal;
+	var workTotal = data.myWorksTotal;
+	var collTotal = data.myCollTotal;
+	
+	
+	
+	if(result.length > 0){
+    	for(i=0; i<result.length; i++){
+
+        		if(result[i] != null){
+	            	html +=	'<div class="exhint_row">';
+	            	html +=	'<div class="exhint_list_img"><img src="'+result[i].comtImgUrl+'" style="width:100%; height:100%;"><div class="ico_num">1+</div></div>';
+	            	html +=	'<div class="contents">';
+                	html += '		<div class="item-ho4 check-div" style="display:none;">';
+                	html += '			<div class="pay-check mana-check">';
+                	html += '				<input type="checkbox" id="'+result[i].comtSq+'" name="chkWorkSq" value="'+result[i].dealSq+'" onclick="selectedCount()">';
+					html += '				<label for="'+result[i].comtSq+'"><span></span></label>';
+					html += '			</div>';
+					html += '		</div>';
+	            	html += '   <ul>';
+					if(result[i].cmtOpenYn != "N"){
+						html += '			<button type="button" class="workOpenYnBtn"><span class="iv-span" workSq="'+result[i].workSq+'" onclick="openYn(this)" style="display:none;"></span></button>';
+					}else{
+						html += '			<button type="button" class="workOpenYnBtn"><span class="iv-span active" workSq="'+result[i].workSq+'" onclick="openYn(this)" style="display:none;""></span></button>';
+					}
+	            	html += '   <a href="/community/exhibitDetail?SqNumber='+result[i].comtSq+'">';
+	            	html += '       <li>';
+	            	html += '           <div class="tit">'; 
+	            	html += '               <em>'+result[i].comtTitle+'</em>';                                                                
+	            	html += '           </div>';
+	            	html += '       </li>';
+	            	html += '       <li class="pt10 height_18_5rem"><p>'+result[i].cmtContent+'</p></li>';
+	            	html += '      </a>';
+	            	html += '      <li class="comt-row-info">';
+	            	html += '           <div class="user_wrap">';
+	            	html += '               <div class="user">';
+	            	html += '                   <ul>';
+	            	if(result[i].mbrProfileImgUrl != null && result[i].mbrProfileImgUrl !=""){
+	                	html +=		'                <li class="pt5"><img src="'+result[i].mbrProfileImgUrl+'" alt=""></li>';
+	            	}else{
+	                	html +=		'                <li class="pt5"><img src="/resources/img/img_new/ico_dauser.png" alt=""></li>';
+	            	}
+	            	html += '                      <li class="user_name"><span>'+result[i].mbrNcknm+'</span></li>';
+	            	html += '                  </ul>';
+	            	html += '               </div>';
+	            	html += '               <div class="icon_box">';
+	            	html += '                   <ul>';
+	            	html +=		'                    <li><p class="ico_good"></p><span>'+result[i].cmtLikes+'</span></li>';
+	            	html +=		'                    <li><p class="ico_scrap"></p><span>'+result[i].cmtScraps+'</span></li>';
+	            	html +=		'                    <li><p class="ico_hits"></p><span></span>'+result[i].cmtViews+'</li>';
+	            	html +=		'                    <li><p class="ico_comments"></p><span>'+result[i].cmtTotalCount+'</span></li>';
+	            	html += '                   </ul>';
+	            	html += '               </div>';
+	            	html += '           </div>';                                
+	            	html += '       </li>';
+	            	html += '   </ul>';
+	            	html +=	'</div>';
+	            	html +=	'</div>';
+	            	
+        		}
+    	}
+
+    	$(".mypage_exhint_contents_wrap").empty();
+        $(".mypage_exhint_contents_wrap").append(html).trigger("create");
+        setContentText($(".comt_content"));
+		masonryLayout(callback);
+		setPagenation(data);
+	}else{
+		$(".mypage_exhint_contents_wrap").empty();
+		$(".pagination").empty();
+    		if(searchOptions.workTypCd === undefined && searchOptions.keyword === undefined){
+    			if(!isMobile){
+        			modalAlertShow("검색 결과가 없습니다.");
+        		}else{
+        			alert("검색 결과가 없습니다.");
+        		}
+    		}else{
+    			if(!isMobile){
+        			modalAlertShow("검색 결과가 없습니다.", "reload");
+        		}else{
+        			alert("검색 결과가 없습니다.");
+        			location.reload();
+        		}
+    		}
+	}		
+	
+	$("#myTotal").text(Total);
+	$("#myCollTotal").text(collTotal);
+	$("#myWorkTotal").text(workTotal);
+}
+
+// 작성 글 내용 텍스트만 가져오기
+function setContentText(content) {
+	// ck에디터 태그 제외하기 위한 정규식
+	var regex = /ck-/;
+	
+	$.each(content, function(idx, item) {
+		var childTags = $(item).children();
+		var text = "";
+		
+		$.each(childTags, function(idx, item) {
+			var tagClasses = $(item).attr("class");
+			
+			// 클래스가 있을 경우
+			if(tagClasses) {
+				// ck-로 시작하는 클래스명이 없을 경우 텍스트를 가져옴
+				if(tagClasses.search(regex) === -1) {
+					text += $(item).text();
+				}
+			} else {
+				text += $(item).text();
+			}
+		});
+		
+		$(item).html(text);
+	});
+}
+
+//화면 레이아웃 추가
+function masonryLayout(callback) {
+ 	var msnry = new Masonry( '.exhint_row', {
+  		itemSelector: '.contents',
+  	  	columnWidth: 360,
+  	  	gutter: 10,
+  	  	horizontalOrder: true,
+  	  	// originLeft: false //왼쪽부터 정렬 
+  	  	// originTop: false //바닥부터
+  	  	transitionDuration: '0.2s' //위치 전환 시간
+	});
+
+	imagesLoaded( '.exhint_row' ).on( 'progress', function() {
+		msnry.layout();
+	});
+	
+	if(callback == "wrh1"){
+		wrh1Callback();
+	}
+	if(callback == "wrh2"){
+		wrh2Callback();
+	}
+	if(callback == "wrh3"){
+		wrh3Callback();
+	}
+}
+</script>
 </html>
