--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main.html
@@ -107,7 +107,7 @@
                   <div class="mypage_works_wrap">
                     <div class="tit_wrap">
                         <h2>나의 작품 <span id="myWorksTotal">0</span></h2>
-                        <a href="/myPage/myWorkList" class="btn_more">더보기</a>
+                        <a href="/myPage/workList" class="btn_more">더보기</a>
                     </div>
                     <ul id="myWorks">
                         <li>
@@ -124,7 +124,7 @@
                   <div class="mypage_showingoff_wrap">
                     <div class="tit_wrap">
                         <h2>자랑하기 <span id="myBoastTotal">0</span></h2>
-                        <a href="/temp/mypage_showingoff" class="btn_more">더보기</a>
+                        <a href="/myPage/show_off" class="btn_more">더보기</a>
                     </div>
                     <ul id="myBoast">
                         <li>
@@ -142,7 +142,7 @@
                     <div class="intro_posts">
                         <div class="tit_wrap">
                             <h2><img src="/resources/img/img_new/ico_intro.png" alt=""><span>전시후기 / 소개</span><em id="myExhbnTotal">+99</em></h2>
-                            <a href="/temp/mypage_exhint" class="btn_more">더보기</a>
+                            <a href="/myPage/exhint" class="btn_more">더보기</a>
                         </div>
                         <ol id="myExhbn">
                             <li><a href="#">희망을 주는 그림</a><em>[7]</em></li>
@@ -156,7 +156,7 @@
                     <div class="issue_posts">
                         <div class="tit_wrap">
                             <h2><img src="/resources/img/img_new/ico_issue.png" alt=""><span>이슈</span><em id="myIssueTotal">+99</em></h2>
-                            <a href="/temp/mypage_issue" class="btn_more">더보기</a>
+                            <a href="/myPage/issue" class="btn_more">더보기</a>
                         </div>
                         <ol id="myIssue">
                             <li><a href="#">도자기 보관 방법</a><em>[7]</em></li>
