--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main.html
@@ -168,10 +168,10 @@
                   </div>
                   <div class="mypage_scrap_wrap">
                     <div class="tit_wrap">
-                        <h2>스크랩 <span>0</span></h2>
+                        <h2>스크랩 <span id="myScrapTotal">0</span></h2>
                         <button class="btn_more">더보기</button>
                     </div>
-                    <ul>
+                    <ul id="myScrap">
                         <li>
                           <a href="#"><img src="/resources/img/img_new/sample_master01.jpg" alt=""></a>
                         </li>
@@ -181,14 +181,14 @@
                         <li class="pic_more">
                           <a href="#"><span>+ 99</span><img src="/resources/img/img_new/sample_master03.jpg" alt=""></a>
                         </li>                        
-                      </ul>
+                  	</ul>
                   </div>
                   <div class="mypage_following_wrap">
                     <div class="tit_wrap">
-                        <h2>팔로잉 <span>0</span></h2>
+                        <h2>팔로잉 <span id="myFollowingTotal">0</span></h2>
                         <button class="btn_more">더보기</button>
                     </div>
-                    <ul>
+                    <ul id="myFollowing">
                         <li>
                           <a href="#"><img src="/resources/img/img_new/sample_master01.jpg" alt=""></a>
                         </li>
@@ -203,10 +203,10 @@
                   <div class="mypage_posts_warp">
                     <div class="noticebox_posts">
                         <div class="tit_wrap">
-                            <h2><img src="/resources/img/img_new/ico_notice.png" alt=""><span>알림함</span><em>+0</em></h2>
+                            <h2><img src="/resources/img/img_new/ico_notice.png" alt=""><span>알림함</span><em id="myNotisTotal">0</em></h2>
                             <button class="btn_more">더보기</button>
                         </div>
-                        <ol>
+                        <ol id="myNotis">
                             <li><a href="#">[판매제안] 작품이 너무 맘에 듭니다. 판매로 올려주세요 ♥</a></li>
                             <li><a href="#">[가격제안] 10% 낮춰서 1,000,000원에 구매 희망합니다!</a></li>
                             <li><a href="#">[상세사진요청]후면 사진 요청 드려요.</a></li>
