모바일>커뮤니티>탭메뉴 : 선택된 탭 활성화 표시 적용

--- a/src/main/resources/templates/thymeleaf/fo/community/community_home_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_home_mo.html
@@ -105,8 +105,8 @@
         <div class="community_wrap">            
             <div id="nav">
                 <ul>
-                     <li><a href="/community/mainMobile">홈</a></li>
-                    <li><a href="/community/worksListMobile" class="over">작품자랑</a></li>
+                     <li><a href="/community/mainMobile" class="over">홈</a></li>
+                    <li><a href="/community/worksListMobile">작품자랑</a></li>
                     <li><a href="/community/exhintListMobile">전시후기&소개</a></li>
                     <li><a href="/community/issueListMobile">이슈</a></li>
                     <li><a href="/community/eventMobile">이벤트</a></li>   
