--- a/src/main/resources/templates/thymeleaf/fo/community/community_exhint_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_exhint_mo.html
@@ -102,8 +102,8 @@
             <div id="nav">
             	<ul>
                      <li><a href="/community/mainMobile">홈</a></li>
-                    <li><a href="/community/worksListMobile" class="over">작품자랑</a></li>
-                    <li><a href="/community/exhintListMobile">전시후기&소개</a></li>
+                    <li><a href="/community/worksListMobile" >작품자랑</a></li>
+                    <li><a href="/community/exhintListMobile" class="over">전시후기&소개</a></li>
                     <li><a href="/community/issueListMobile">이슈</a></li>
                     <li><a href="/community/eventMobile">이벤트</a></li>   
                 </ul>
